top-menu in develop

--- a/sedona.html
+++ b/sedona.html
@@ -2,11 +2,31 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title> Alisaeyd </title>
+    <title> Sedona </title>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="main_style.css" rel="stylesheet">
-    <!--<link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic' rel='stylesheet' type='text/css'> -->
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans+Caption&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 </head>
 <body> 
+<div class="page_wrap">
+<header class="top-menu">
+    <div class="top-menu__item">
+        Информация
+    </div>
+    <div class="top-menu__item">
+        Фото и видео
+    </div>
+    <div class="top-menu__item--with-image">
+        gtc
+    </div>
+    <div class="top-menu__item">
+        Карта штата
+    </div>
+    <div class="top-menu__item">
+        Гостиницы
+    </div>
+</header>
+</div>
 </body>
+</html>
 
