--- a/sedona.html
+++ b/sedona.html
@@ -16,8 +16,10 @@
     <div class="top-menu__item">
         Фото и видео
     </div>
-    <div class="top-menu__item--with-image">
-        gtc
+    <div class="top-menu__item">
+        <div class="tingle">
+            <img src="images/rag.png">
+        </div>
     </div>
     <div class="top-menu__item">
         Карта штата
