--- a/sedona.html
+++ b/sedona.html
@@ -28,6 +28,12 @@
         Гостиницы
     </div>
 </header>
+<div class="background-of-hat">
+    <img src="images/background_photo.jpg">
+</div>
+<div class="hat"
+    <div class="hat__welcom
+</div>
 </div>
 </body>
 </html>
