problem with shift block

--- a/sedona.html
+++ b/sedona.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
 <div class="page_wrap">
-<header class="top-menu">
+<div class="top-menu">
     <div class="top-menu__item">
         Информация
     </div>
@@ -27,12 +27,14 @@
     <div class="top-menu__item">
         Гостиницы
     </div>
-</header>
+</div>
 <div class="background-of-hat">
     <img src="images/background_photo.jpg">
 </div>
-<div class="hat"
-    <div class="hat__welcom
+<div class="banner">
+    <div class="banner__title">
+        WELCOME
+    </div> 
 </div>
 </div>
 </body>
