--- a/sedona.html
+++ b/sedona.html
@@ -35,6 +35,9 @@
     <div class="banner__title">
         WELCOME
     </div> 
+    <div class="banner__tagstring">
+        vagon
+    </div>
 </div>
 </div>
 </body>
