--- a/sedona.html
+++ b/sedona.html
@@ -8,7 +8,6 @@
     <link href='https://fonts.googleapis.com/css?family=PT+Sans+Caption&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 </head>
 <body> 
-<div class="page_wrap">
 <div class="top-menu">
     <div class="top-menu__item">
         Информация
@@ -33,13 +32,21 @@
 </div>
 
 <div class="banner">
-    <div class="banner__title">
-        WELCOME
-    </div> 
-    <div class="banner__tagstring">
-        vagon
+    <div class="banner-header">
+        <div class="banner-header__title">
+            WELCOM
+        </div>
+        <div class="banner-header__subtitle">
+            to the gargeous
+        </div>
     </div>
-</div>
+    <div class="banner-body">
+        SEDONA
+    </div>
+    <div class="banner-footer">
+        <img src="images/banner-footer.png">
+    </div>
+
 </div>
 </body>
 </html>
