problem with background-image

--- a/sedona.html
+++ b/sedona.html
@@ -46,6 +46,9 @@
     <div class="banner-footer">
         <img src="images/banner-footer.png">
     </div>
+    <div class="banner-triangle-decor">
+        GOOGLE
+    </div>
 
 </div>
 </body>
