back image send to server

--- a/sedona.html
+++ b/sedona.html
@@ -46,8 +46,9 @@
     <div class="banner-footer">
         <img src="images/banner-footer.png">
     </div>
-    <div class="banner-triangle-decor">
-        GOOGLE
+    <div class="banner-triangle-decor__right-triangle">
+    </div>
+    <div class="banner-triangle-decor__left-triangle">
     </div>
 
 </div>
