--- a/sedona.html
+++ b/sedona.html
@@ -5,7 +5,7 @@
     <title> Sedona </title>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="main_style.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans+Caption&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 </head>
 <body> 
 <div class="top-menu">
@@ -27,9 +27,6 @@
         Гостиницы
     </div>
 </div>
-<div class="background-of-hat">
-    <img src="images/background_photo.jpg">
-</div>
 
 <div class="banner">
     <div class="banner-header">
@@ -46,11 +43,27 @@
     <div class="banner-footer">
         <img src="images/banner-footer.png">
     </div>
-    <div class="banner-triangle-decor__right-triangle">
+    <div class="problem">
+        <img src="images/bg-poster-mask.svg">
     </div>
-    <div class="banner-triangle-decor__left-triangle">
-    </div>
+</div>
 
+</div>
+<section> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </section>
+<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/Harry-Potter-1-.jpg" alt="" class="clip-svg">
+
+<svg width="50" height="50">
+    <clipPath id="myClip">
+      <circle cx="100" cy="100" r="40" stroke="green" stroke-width="4" fill="green"/>
+      <circle cx="60" cy="60" r="40"/>
+   </clipPath> 
+    
+</svg>
+<svg width="100" height="100">
+   <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="black" />
+   Sorry, your browser does not support inline SVG.
+</svg> 
+<img src="images/musor.jpg" class="clip-me">
 </div>
 </body>
 </html>
