--- a/sedona.html
+++ b/sedona.html
@@ -5,7 +5,7 @@
     <title> Sedona </title>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="main_style.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans+Caption&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 </head>
 <body> 
 <div class="top-menu">
@@ -49,7 +49,27 @@
 </div>
 
 </div>
-<section> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </section>
+<section class="block-for-turist"> 
+    <div class="block-for-turist__caption"> 
+                        <div>седона - небольшой городок в аризоне,</div>
+                        <div> заслуживающий большего!</div>
+    </div>
+    <div class="block-for-turist__subcaption">
+        <p>рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
+    </div>
+    <section class="content-for-tourist">
+                <div class="content-for-tourist__text-of-city">
+                </div> 
+                <div class="content-for-tourist__image-of-city">
+                </div>
+    </section>
+    <section class="content-for-tourist">
+    </section>
+    <section class="content-for-tourist">
+    </section>
+    <section class="content-for-tourist">
+    </section>
+</section>
 
 
 </div>
