--- a/sedona.html
+++ b/sedona.html
@@ -59,6 +59,9 @@
     </div>
     <section class="content-for-tourist">
                 <div class="content-for-tourist__text-of-city">
+                        <p>НАСТОЯЩИЙ<br> ГОРОДОК</p>
+                        <p> &minus; &#8470;1 &minus;</p>
+                        <p class="content-for-tourist__text-of-city--font10px">седона не аттракцион для туристов,<br> там течет настоящая жизнь </p>
                 </div> 
                 <div class="content-for-tourist__image-of-city">
                 </div>
