--- a/sedona.html
+++ b/sedona.html
@@ -67,6 +67,8 @@
                 </div>
     </section>
     <section class="content-for-tourist">
+        <div class="content-for-tourist__services">
+        </div>
     </section>
     <section class="content-for-tourist">
     </section>
