block food souvenirs habitation

--- a/sedona.html
+++ b/sedona.html
@@ -63,12 +63,26 @@
                         <p> &minus; &#8470;1 &minus;</p>
                         <p class="content-for-tourist__text-of-city--font10px">седона не аттракцион для туристов,<br> там течет настоящая жизнь </p>
                 </div> 
+        </div>
                 <div class="content-for-tourist__image-of-city">
                 </div>
     </section>
-    <section class="content-for-tourist">
-        <div class="content-for-tourist__services">
-        </div>
+    <section class="content-for-tourist__higher">
+                <section class="content-for-tourist__habitation">
+                    <img src="images/habitation.png">
+                    <p class="content-for-tourist__higher--title-bold">жилье</p>
+                    <p class="content-for-tourist__higher--subtitle">рекомендуем пожить в настоящем<br> мотеле, все как в кино!</p>
+                </section>
+                <section class="content-for-tourist__food">
+                    <img src="images/food.png">
+                    <p class="content-for-tourist__higher--title-bold"> еда </p>
+                    <p class="content-for-tourist__higher--subtitle"> всегда заказывай фирменный бургер,<br> вы не разочаруетесь!</p>
+                </section>
+                <section class="content-for-tourist__souvenirs">
+                    <img src="images/souvenirs.png">
+                    <p class="content-for-tourist__higher--title-bold">сувениры</p>
+                    <p class="content-for-tourist__higher--subtitle"> не только китайского,<br>но и местного производства!</p>
+                </section>
     </section>
     <section class="content-for-tourist">
     </section>
