--- a/sedona.html
+++ b/sedona.html
@@ -85,11 +85,35 @@
                 </section>
     </section>
     <section class="content-for-tourist">
-    </section>
-    <section class="content-for-tourist">
+                <div class="content-for-tourist__image-of-bridge">
+                </div>
+            <div class="content-for-tourist__text-of-bridge">
+                        <p>ТАМ ЕСТЬ<br> МОСТ ДЬЯВОЛА</p> 
+                         <p> &minus; &#8470;2 &minus;</p>
+                        <p class="content-for-tourist__text-of-city--font10px">ДА, ПО НЕМУ МОЖНО ПРОЙТИСЬ<br> ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ  </p>
+                </div> 
+        </div>
+
+    </section> <section class="content-for-tourist"> <div class="content-for-tourist__small-area">
+                    <p class="taff"> НЕБОЛЬШАЯ<br> ПЛОЩАДЬ </p>
+                    <p> &minus; &#8470;3 &minus;</p>
+                    <p class="lighter"> ВСЕ ДОСТОПРИМЕЧА-<br>ТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+            </div>
+            <div class="content-for-tourist__small-area">
+                    <p class="taff" > КРАСИВАЯ<br>ДОРОГА </p>
+                    <p> &minus; &#8470;4 &minus;</p>
+                    <p class="lighter">ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ<br>НЕ СКУЧНО!</p>
+            </div>
+            <div class="content-for-tourist__small-area">
+                    <p class="taff"> МАЛО<br>ТУРИСТОВ </p>
+                    <p> &minus; &#8470;5 &minus;</p>
+                    <p class="lighter"> БОЛЬШТНСТВО ЕДЕТ В ГРАНД КАНЬОН И<br>ТОЛПЯТСЯ ТАМ!</p>
+            </div>
     </section>
 </section>
-
+<h1 class="map-title"> ЗАИНТЕРЕСОВАЛИСЬ? </h1>
+<div class="map-subtitle"> укажите предполагаемые даты поездки<br> и мы покажем вам лучшие предположения гостиниц в седоне </div>
+<div class="btn-search-to-hotel">ПОИСК ГОСТИНИЦ В СЕДОНЕ</div>
 
 </div>
 </body>
