--- a/sedona.html
+++ b/sedona.html
@@ -107,15 +107,29 @@
             <div class="content-for-tourist__small-area">
                     <p class="taff"> МАЛО<br>ТУРИСТОВ </p>
                     <p> &minus; &#8470;5 &minus;</p>
-                    <p class="lighter"> БОЛЬШТНСТВО ЕДЕТ В ГРАНД КАНЬОН И<br>ТОЛПЯТСЯ ТАМ!</p>
+                    <p class="lighter"> БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И<br>ТОЛПЯТСЯ ТАМ!</p>
             </div>
     </section>
 </section>
 <h1 class="map-title"> ЗАИНТЕРЕСОВАЛИСЬ? </h1>
 <div class="map-subtitle"> укажите предполагаемые даты поездки<br> и мы покажем вам лучшие предположения гостиниц в седоне </div>
-<div class="btn-search-to-hotel">ПОИСК ГОСТИНИЦ В СЕДОНЕ</div>
-
+<div class="carcas"><div class="btn-search-to-hotel">ПОИСК ГОСТИНИЦ В СЕДОНЕ</div></div>
+<div class="map" id="map">
+    <div class="slide-menu">
+        <form class="form-for-search-hotel">
+            <div class="form-row">
+                <label for="date-in" class="padding-label-form" >дата заезда:</label>
+                <input type="date" name="date-in" class="form-input">
+            </div> 
+            <div class="form-row"></div> 
+            <div class="form-row"></div> 
+            <div class="form-row"></div> 
+        </form>
+    </div>
 </div>
 </body>
+
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </html>
 
