--- a/sedona.html
+++ b/sedona.html
@@ -94,7 +94,8 @@
                 </div> 
         </div>
 
-    </section> <section class="content-for-tourist"> <div class="content-for-tourist__small-area">
+    </section> 
+    <section class="content-for-tourist porebrik"> <div class="content-for-tourist__small-area">
                     <p class="taff"> НЕБОЛЬШАЯ<br> ПЛОЩАДЬ </p>
                     <p> &minus; &#8470;3 &minus;</p>
                     <p class="lighter"> ВСЕ ДОСТОПРИМЕЧА-<br>ТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
