--- a/sedona.html
+++ b/sedona.html
@@ -119,10 +119,10 @@
     <div class="slide-menu">
         <form class="form-for-search-hotel">
             <div class="form-row">
-                <label for="date-in" class="padding-label-form" >дата заезда:</label>
-                <input type="date" name="date-in" class="form-input">
+                    <div class="love-float"><label for="date-in" class="padding-label-form" >дата заезда:</label></div>
+                   <div class="love-float love-float-input"><input type="date" name="date-in"></div>
             </div> 
-            <div class="form-row"></div> 
+            <div class="form-row"> Дата выезда</div> 
             <div class="form-row"></div> 
             <div class="form-row"></div> 
         </form>
