--- a/sedona.html
+++ b/sedona.html
@@ -117,15 +117,21 @@
 <div class="carcas"><div class="btn-search-to-hotel">ПОИСК ГОСТИНИЦ В СЕДОНЕ</div></div>
 <div class="map" id="map">
     <div class="slide-menu">
+    <div class="inside-slide-menu">
+        padding
+    </div>
         <form class="form-for-search-hotel">
             <div class="form-row">
-                    <div class="love-float"><label for="date-in" class="padding-label-form" >дата заезда:</label></div>
-                   <div class="love-float love-float-input"><input type="date" name="date-in"></div>
+                    <div class="love-float"><label for="date-in" class="padding-label-form" >дата заезда:</label>
+                   <input type="date"   name="date-in">
             </div> 
-            <div class="form-row"> Дата выезда</div> 
+            <div class="form-row"> 
+			<div class="love-float"><label for="date-in" class="padding-label-form" >дата выезда: </label>
+              <input type="date" class="love-float-input"  name="date-in">
+	    </div> 
             <div class="form-row"></div> 
             <div class="form-row"></div> 
-        </form>
+        </form> 
     </div>
 </div>
 </body>
