--- a/sedona.html
+++ b/sedona.html
@@ -117,18 +117,15 @@
 <div class="carcas"><div class="btn-search-to-hotel">ПОИСК ГОСТИНИЦ В СЕДОНЕ</div></div>
 <div class="map" id="map">
     <div class="slide-menu">
-    <div class="inside-slide-menu">
-        padding
-    </div>
         <form class="form-for-search-hotel">
             <div class="form-row">
                     <div class="love-float"><label for="date-in" class="padding-label-form" >дата заезда:</label>
-                   <input type="date"   name="date-in">
+                   <input type="date" class="kurwa-input"  name="date-in"></div>
             </div> 
             <div class="form-row"> 
-			<div class="love-float"><label for="date-in" class="padding-label-form" >дата выезда: </label>
-              <input type="date" class="love-float-input"  name="date-in">
-	    </div> 
+		        	<div class="love-float"><label for="date-in" class="padding-label-form" >дата выезда: </label>
+              <input type="date" class="kurwa-input" name="date-in"></div>
+	        </div> 
             <div class="form-row"></div> 
             <div class="form-row"></div> 
         </form> 
