--- a/sedona.html
+++ b/sedona.html
@@ -118,16 +118,8 @@
 <div class="map" id="map">
     <div class="slide-menu">
         <form class="form-for-search-hotel">
-            <div class="form-row">
-                    <div class="love-float"><label for="date-in" class="padding-label-form" >дата заезда:</label>
-                   <input type="date" class="kurwa-input"  name="date-in"></div>
-            </div> 
-            <div class="form-row"> 
-		        	<div class="love-float"><label for="date-in" class="padding-label-form" >дата выезда: </label>
-              <input type="date" class="kurwa-input" name="date-in"></div>
-	        </div> 
-            <div class="form-row"></div> 
-            <div class="form-row"></div> 
+            <div class="inside-string-form"><label class="label-block"> Дата заезда</label><input class="input-block" type="date"></input></div>
+            <div><label class="label-block"> Дата выезда</label><input class="input-block" type="date"></input></div>
         </form> 
     </div>
 </div>
