2 string form - complit

--- a/sedona.html
+++ b/sedona.html
@@ -118,10 +118,14 @@
 <div class="map" id="map">
     <div class="slide-menu">
         <form class="form-for-search-hotel">
-            <div class="inside-string-form"><label class="label-block"> Дата заезда</label><input class="input-block" type="date"></input></div>
-            <div><label class="label-block"> Дата выезда</label><input class="input-block" type="date"></input></div>
+            <div class="inside-string-form"><label class="label-block"> Дата заезда:</label><input class="input-block" type="date"></input></div>
+            <div class="inside-string-form"><label class="label-block"> Дата выезда:</label><input class="input-block" type="date"></input></div> 
+            <div class="inside-string-form">
+                    
+            </div>
         </form> 
-    </div>
+            </div>
+            
 </div>
 </body>
 
