its hard form label input in one string

--- a/sedona.html
+++ b/sedona.html
@@ -121,6 +121,8 @@
             <div class="inside-string-form"><label class="label-block"> Дата заезда:</label><input class="input-block" type="date"></input></div>
             <div class="inside-string-form"><label class="label-block"> Дата выезда:</label><input class="input-block" type="date"></input></div> 
             <div class="inside-string-form">
+                <span class="adult"><label class="label-counter-adult">Взрослые</label>   <input type="number" class="input-adult"></input></span>
+                <span class="children"><label class="label-counter-children">Дети</label></span>
                     
             </div>
         </form> 
