fuck fuck fuck i dispointed

--- a/sedona.html
+++ b/sedona.html
@@ -122,7 +122,7 @@
             <div class="inside-string-form"><label class="label-block"> Дата выезда:</label><input class="input-block" type="date"></input></div> 
             <div class="inside-string-form">
                 <span class="adult"><label class="label-counter-adult">Взрослые</label>   <input type="number" class="input-adult"></input></span>
-                <span class="children"><label class="label-counter-children">Дети</label></span>
+                <span class="children"><label class="label-counter-children">Дети</label>  <input type="numder" class="input-children"></input></span>
                     
             </div>
         </form> 
