FORM FINISH HIM

--- a/sedona.html
+++ b/sedona.html
@@ -123,12 +123,13 @@
             <div class="inside-string-form">
                 <span class="adult"><label class="label-counter-adult">Взрослые</label>   <input type="number" class="input-adult"></input></span>
                 <span class="children"><label class="label-counter-children">Дети</label>  <input type="numder" class="input-children"></input></span>
-                    
             </div>
+            <button class="button-submit" type="submit">найти</button>                    
         </form> 
             </div>
-            
 </div>
+
+ <div> Hello footer </div>
 </body>
 
 <script type="text/javascript" src="js/jquery.js"></script>
